--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
   "dependencies": {
     "confidence": "^3.0.2",
     "glue": "^5.0.0",
-    "hapi": "^17.5.2",
     "handlebars": "^4.0.11",
+    "hapi": "^17.5.2",
     "hoek": "^5.0.3",
     "inert": "^5.1.0",
     "joi": "^13.4.0",
@@ -29,8 +29,11 @@
     "lout": "^11.0.1",
     "nodemon": "^1.18.3",
     "npm": "^6.2.0",
+    "puppeteer": "^1.7.0",
     "ramda": "^0.25.0",
     "vision": "^5.3.3",
-    "visionary": "^6.0.2"
+    "visionary": "^6.0.2",
+    "wreck": "^14.1.0",
+    "yar": "^9.0.1"
   }
 }
