--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "bluebird": "^3.5.1",
     "confidence": "^3.0.2",
+    "dotenv": "^6.0.0",
     "glue": "^5.0.0",
     "handlebars": "^4.0.11",
     "hapi": "^17.5.2",
