--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "quake-seeds",
   "version": "1.1.2",
   "description": "Quake Seeds - Web app to seed Quake Champion players",
-  "main": "index.js",
+  "main": "lib/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon --watch server/ --watch manifest.js --watch templates/ --watch static/js --watch static/css -e js,css,html"
+    "start": "nodemon server --watch server/ --watch lib/ -e js,css,html"
   },
   "repository": {
     "type": "git",
@@ -19,11 +19,13 @@
   "homepage": "https://gitlab.com/terrain/server#README",
   "dependencies": {
     "bluebird": "^3.5.1",
+    "boom": "^7.2.0",
     "confidence": "^3.0.2",
     "dotenv": "^6.0.0",
     "glue": "^5.0.0",
     "handlebars": "^4.0.11",
     "hapi": "^17.5.2",
+    "haute-couture": "^3.0.1",
     "hoek": "^5.0.3",
     "inert": "^5.1.0",
     "joi": "^13.4.0",
@@ -32,6 +34,7 @@
     "nodemon": "^1.18.3",
     "npm": "^6.2.0",
     "ramda": "^0.25.0",
+    "toys": "^2.2.1",
     "vision": "^5.3.3",
     "visionary": "^6.0.2",
     "wreck": "^14.1.0",
@@ -39,5 +42,12 @@
   },
   "engines": {
     "node": "9.11.1"
+  },
+  "devDependencies": {
+    "eslint": "^5.6.1",
+    "eslint-config-hapi": "^12.0.0",
+    "eslint-plugin-hapi": "^4.1.0",
+    "hpal": "^1.2.1",
+    "hpal-debug": "^1.1.0"
   }
 }
